Fix overflow in mobile view caused by horizontal rule

--- a/assets/sass/_main.scss
+++ b/assets/sass/_main.scss
@@ -34,6 +34,10 @@ hr {
   border: 1px solid $orange;
   border-radius: 5px;
   width: ($text-width - 100px);
+  @media only screen and (max-width: 480px) {
+    box-sizing: border-box;
+    max-width: 100%;
+  }
 }
 
 .center {
